# SFPE-5M

./: plan.md
sfpe_5m/: BLOCKERS.md  README.md  pyproject.toml  requirements.txt
sfpe_5m/config/: default_search_space.yaml  instruments.yaml  portfolio.yaml  session_calendars.yaml  validation_policy.yaml
sfpe_5m/features/: tpo__MCL.csv
sfpe_5m/notebooks/: 01_data_audit.md
sfpe_5m/reporting/: plots.py  summary.py  tear_sheet.py
sfpe_5m/reports/: data_integrity_by_instrument.csv  data_integrity_summary.md  roll_candidates.csv  v1_2_summary.md  v1_3_summary.md  v1_4_micros_vs_majors.md  v1_4_phase5_VERDICT.md  v1_4_phase5_baselines.csv  v1_4_phase5_metrics.csv  v1_4_phase5_per_instrument_equity__ES.csv  v1_4_phase5_per_instrument_equity__M2K.csv  v1_4_phase5_per_instrument_equity__MCL.csv  v1_4_phase5_per_instrument_equity__MES.csv  v1_4_phase5_per_instrument_equity__MGC.csv  v1_4_phase5_per_instrument_equity__MNQ.csv  v1_4_phase5_per_instrument_equity__MYM.csv  v1_4_phase5_per_instrument_equity__RTY.csv  v1_4_phase5_per_instrument_equity__YM.csv  v1_4_phase5_portfolio_equity__conf=0.50.csv  v1_4_phase5_portfolio_equity__conf=0.65.csv  v1_4_phase5_roll_skip_blocked.csv  v1_4_phase5_slippage_table.csv  v1_4_phase5_stress_windows.csv  v1_4_phase5_summary.md  v1_4_phase5_trade_count_audit.csv  v1_4_roll_audit.md  v1_4_roll_candidates.csv  v1_4_trade_count_audit.md  v1_5_phase5_VERDICT.md  v1_5_phase5_postmortem.md  v1_5_phase5_postmortem_trades.csv  v1_5_phase5_postmortem_winners.csv  v1_summary.md
sfpe_5m/scripts/: run_backtest.py  run_data_audit.py  run_engines.py  (+7 more)
(+116 files in other folders)
